--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
 }
 
 .header {
-  background: linear-gradient(270deg, #697a82, #1c3042);
+  background: linear-gradient(180deg, #000000, #323232);
   color: white;
   width: 100vw;
   z-index: 10;
@@ -23,7 +23,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 5px;
-  background: linear-gradient(270deg, #697a82, #1c3042);
+  background: linear-gradient(180deg, #000000, #323232);
 }
 
 .header-logo {
