--- a/styles/characterForm.css
+++ b/styles/characterForm.css
@@ -1,8 +1,18 @@
-.page-content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.page-content-screen {
   min-height: 100vh;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(110deg, #F3ED7B, #000000, #35c9dd);
+}
+
+.page-content {
+  margin-top: 5vh;
+  min-width: 75vw;
+  display: grid;
+  grid-template-columns: 40vw 50vw;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .page-content-form,
@@ -12,48 +22,106 @@
 
 .page-content-form {
   background-color: #5aaaec; 
-  padding: 20px;
-  border-radius: 10px; 
+  padding: 2rem;
+  border-radius: 10px 0 0 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.form-title{
- color: white;
- margin-bottom: 20px;
+.form-title {
+  color: white;
+  font-size: 24px;
+  margin-bottom: 2rem;
+  text-align: left;
 }
 
-.form-btn{
-  margin-top: 4px;
-  bottom: -20vh;
-  padding: 0.5rem 1rem;
-  border: none;
+.form-input,
+.form-select {
+  width: calc(100% - 24px); 
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+}
+
+.form-input:focus,
+.form-select:focus {
+  border-color: #35c9dd;
+  outline: none; 
+}
+
+.gender-label {
+  margin-bottom: 10px;
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 18px;
+  color: white;
+}
+
+.page-content-form-gender {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"] + label {
+  background-color: #35c9dd;
+  color: white;
+  padding: 10px 15px;
   border-radius: 5px;
-  background-color: #f4f4f4;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
-.form-btn:hover{
-  background-color: #35c9dd;
-  color: white;
-  scale: 1.1;
+input[type="radio"]:checked + label {
+  background-color: #333;
 }
 
+input[type="radio"] + label:hover {
+  background-color: #4fa8c0;
+}
+
+.form-btn {
+  margin-top: 2.5rem;
+  width: 100%;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  background-color: #f4f4f4;
+  color: #333;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.form-btn:hover {
+  background-color: #35c9dd;
+  cursor: pointer;
+  color: white;
+  transform: scale(1.01);
+}
 
 .image-div {
-  background-color: #e0e0e0; /* Color de fondo del div */
+  background-image: url('/images/rym_form.jpg');
   padding: 20px;
-  border-radius: 10px; /* Bordes redondeados */
+  border-radius: 0 10px 10px 0; 
+  background-size: cover; 
+  background-position: center; 
 }
 
 .page-content-form input,
 .page-content-form select {
   margin: 10px 0;
-  width: 100%;
+  width: calc(100% - 16px); 
   padding: 8px;
-  box-sizing: border-box;
 }
 
 .image-div img {
+  display: block; 
   width: 100%;
-  border-radius: 8px; /* Bordes redondeados para la imagen */
+  border-radius: 0; 
 }
