final touches for project

--- a/styles/characterResult.css
+++ b/styles/characterResult.css
@@ -100,7 +100,8 @@
 .results-recommended-episodes {
   display: flex;
   flex-direction: column;
-  gap: 0.6rem;
+  gap: 0.2rem;
+  padding: 2rem;
   justify-content: center;
   align-items: center;
 }
@@ -115,9 +116,30 @@
 .episode-recomendation {
   width: 90%;
   height: 27%;
-  background-image: url('/images/rym_episode.jpeg');
   border-radius: 10px;
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;
+}
+
+div a button{
+  width: auto;
+  margin: auto;    
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border-color: #000000;
+  border: none;
+  background-color: rgb(240, 235, 235);
+  cursor: pointer;
+  transition: background-color 0.3s;
+  position: absolute;
+  bottom: 1rem; /* Puedes ajustar la distancia desde el borde inferior según sea necesario */
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+div a button:hover{
+  background-color: #35c9dd;
+  color: white;
+  scale: 1.1;
 }
